tests/good/04_print_1.ris
void main():
    let int a = 42;
    let bool b = true;
    let string c = "foo"

    print a;
    print b;
    print c;
    print "\n"

    println a;
    println b;
    println c;

    return;