tests/bad/bad-if.ris
void main():
    if ("foo"):
        print true;
    endif;
    return;